// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CorrectResponse renders snapshot 1`] = `
<div>
  <WithStyles(Typography)
    component="div"
    variant="subheading"
  >
    Define Tool Set and Correct Response
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="div"
    variant="body1"
  >
    Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
  </WithStyles(Typography)>
  <Tools
    classes={Object {}}
    hasErrors={false}
    onDefaultToolChange={[Function]}
    toggleToolBarTool={[Function]}
    toolbarTools={
      Array [
        "circle",
        "line",
        "label",
        "parabola",
        "point",
        "polygon",
        "ray",
        "segment",
        "sine",
        "vector",
      ]
    }
  />
  <div>
    <div>
      Correct Answer
    </div>
  </div>
  <Root
    axesSettings={
      Object {
        "includeArrows": Object {
          "down": true,
          "left": true,
          "right": true,
          "up": true,
        },
      }
    }
    backgroundMarks={Array []}
    coordinatesOnHover={false}
    disabledLabels={true}
    disabledTitle={true}
    domain={
      Object {
        "axisLabel": "x",
        "labelStep": 1,
        "max": 5,
        "min": -5,
        "step": 1,
      }
    }
    draggableTools={true}
    labels={Object {}}
    marks={Array []}
    onChangeMarks={[Function]}
    onChangeTools={[Function]}
    range={
      Object {
        "axisLabel": "y",
        "labelStep": 1,
        "max": 5,
        "min": -5,
        "step": 1,
      }
    }
    showLabels={true}
    size={
      Object {
        "height": 500,
        "width": 500,
      }
    }
    title=""
    toolbarTools={
      Array [
        "circle",
        "line",
        "label",
        "parabola",
        "point",
        "polygon",
        "ray",
        "segment",
        "sine",
        "vector",
      ]
    }
  />
  <div
    onClick={[Function]}
  >
    ADD ALTERNATE
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`CorrectResponse: if answers is null it should still work as expected renders snapshot 1`] = `
<div>
  <WithStyles(Typography)
    component="div"
    variant="subheading"
  >
    Define Tool Set and Correct Response
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="div"
    variant="body1"
  >
    Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
  </WithStyles(Typography)>
  <Tools
    classes={Object {}}
    hasErrors={false}
    onDefaultToolChange={[Function]}
    toggleToolBarTool={[Function]}
    toolbarTools={Array []}
  />
  <div
    onClick={[Function]}
  >
    ADD ALTERNATE
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`CorrectResponse: if answers is undefined it should still work as expected renders snapshot 1`] = `
<div>
  <WithStyles(Typography)
    component="div"
    variant="subheading"
  >
    Define Tool Set and Correct Response
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="div"
    variant="body1"
  >
    Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
  </WithStyles(Typography)>
  <Tools
    classes={Object {}}
    hasErrors={false}
    onDefaultToolChange={[Function]}
    toggleToolBarTool={[Function]}
    toolbarTools={Array []}
  />
  <div
    onClick={[Function]}
  >
    ADD ALTERNATE
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`Tools renders snapshot 1`] = `
<div>
  <div>
    <span>
      GRAPHING TOOLS
    </span>
  </div>
  <div />
</div>
`;
